Fixed icons aligning strangely

--- a/styles/tree-view-git-status.less
+++ b/styles/tree-view-git-status.less
@@ -58,8 +58,10 @@
     }
     .branch-label__icon,
     .branch-label__icon:before {
+      width: auto;
+      padding-left: .1rem;
+      margin-right: .2rem;
       font-size: 1rem;
-      margin-right: .1rem;
     }
   }
 }
